@@ -16,17 +16,18 @@ public class LGResources {
     // Localized strings
     public static class Strings {
 
-        public static final String AXIS_PLUS_X = RESOURCES.getLocalizedString( "axis.+x" );
-        public static final String AXIS_MINUS_X = RESOURCES.getLocalizedString( "axis.-x" );
-        public static final String AXIS_PLUS_Y = RESOURCES.getLocalizedString( "axis.+y" );
-        public static final String AXIS_MINUS_Y = RESOURCES.getLocalizedString( "axis.-y" );
+        public static final String ERASE_LINES = RESOURCES.getLocalizedString( "eraseLines" );
+        public static final String SAVE_LINE = RESOURCES.getLocalizedString( "saveLine" );
+        public static final String SHOW = RESOURCES.getLocalizedString( "show" );
 
-        public static final String EQUATION_Y_EQUALS_MX_PLUS_B = RESOURCES.getLocalizedString( "equation.y=mx+b" );
-        public static final String EQUATION_X_EQUALS_MY_PLUS_B = RESOURCES.getLocalizedString( "equation.x=my+b" );
-        public static final String EQUATION_Y_EQUALS_X = RESOURCES.getLocalizedString( "equation.y=+x" );
-        public static final String EQUATION_Y_EQUALS_MINUS_X = RESOURCES.getLocalizedString( "equation.y=-x" );
+        public static final String SYMBOL_HORIZONTAL_AXIS = RESOURCES.getLocalizedString( "symbol.horizontalAxis" );
+        public static final String SYMBOL_VERTICAL_AXIS = RESOURCES.getLocalizedString( "symbol.verticalAxis" );
+        public static final String SYMBOL_SLOPE = RESOURCES.getLocalizedString( "symbol.slope" );
+        public static final String SYMBOL_INTERCEPT = RESOURCES.getLocalizedString( "symbol.intercept" );
 
         public static final String TAB_INTRO = RESOURCES.getLocalizedString( "tab.intro" );
         public static final String TAB_GAME = RESOURCES.getLocalizedString( "tab.game" );
+
+        public static final String PATTERN_0SIGN_1AXIS = RESOURCES.getLocalizedString( "pattern.0sign.1axis" );
     }
 }
